src/styles.css
/* You can add global styles to this file, and also import other style files */

html, body { height: 100%; overflow: auto;}
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
a { text-decoration: none; }

/* utilities */
.float-right { float: right; }
.text-right { text-align: right; }
.text-center { text-align: center; }

/* card styles */
.card {
  text-align: center;
  width: 80%;
  justify-content: center;
  margin: 0 auto;
  padding: 30px 0px 80px 0px;
}

